--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <button class="btn"> check </button>
+    <button id="btn" onclick="fetchData()">Search</button>
+    <div id="container"></div>
+    <!-- <script src="fetchData.js"></script> -->
     <script src="promiseChain.js"></script>
     <!-- <script src="script.js"></script> -->
 </body>
