--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 </head>
 <body>
     <button class="btn"> check </button>
-    <button id="btn" onclick="fetchData()">Search</button>
-    <div id="container"></div>
+    <!-- <button id="btn" onclick="fetchData()">Search</button> -->
+    <div id="container"></div> 
+    <div id="loading">
+        <div class="loader"></div>
+    </div>
     <!-- <script src="fetchData.js"></script> -->
-    <script src="promiseChain.js"></script>
+    <!-- <script src="promiseChain.js"></script> -->
     <!-- <script src="script.js"></script> -->
+    <script src="fetchwihAsync.js"></script>
 </body>
 </html>
