--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- <button id="btn" onclick="fetchData()">Search</button> -->
     <div id="container"></div> 
     <div id="loading">
-        <div class="loader"></div>
+        <div class="loader"> Loading... </div>
     </div>
     <!-- <script src="fetchData.js"></script> -->
     <!-- <script src="promiseChain.js"></script> -->
