--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
 </head>
 <body>
     <button class="btn"> check </button>
-    <!-- <button id="btn" onclick="fetchData()">Search</button> -->
+    <!-- <button id="btn" onclick="fetchData()">Search</button>
     <div id="container"></div> 
     <div id="loading">
         <div class="loader"> Loading... </div>
-    </div>
+    </div> -->
     <!-- <script src="fetchData.js"></script> -->
     <!-- <script src="promiseChain.js"></script> -->
-    <!-- <script src="script.js"></script> -->
-    <script src="fetchwihAsync.js"></script>
+    <!-- <script src="script.js"></script> 
+    <script src="fetchwihAsync.js"></script>-->
+
 </body>
 </html>
